# neuro-ncap

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  single_machine_docker_run_eval.sh  slurm_singularity_run_eval.sh
docker/: Dockerfile
docs/: evaluation-protocol-overview.md  framework.md  how-to-run.md
neuro_ncap/: engine.py  structures.py
neuro_ncap/components/: __init__.py  evaluator.py  logger.py  model_api.py  nuscenes_api.py  renderer_api.py  scenario.py  vehicle_model.py
neuro_ncap/evaluation/: collision.py  target_recall.py
neuro_ncap/utils/: config.py  math.py  nerfstudio_math.py  web.py
neuro_ncap/visualization/: plotting.py  scenario_visualizer.py
scenarios/frontal/: 0103.yaml  0106.yaml  0110.yaml  0346.yaml  0923.yaml
scenarios/side/: 0103.yaml  0108.yaml  0110.yaml  0278.yaml  0921.yaml
scenarios/stationary/: 0061.yaml  0099.yaml  0101.yaml  0103.yaml  0106.yaml  0108.yaml  0278.yaml  0331.yaml  0783.yaml  0796.yaml  0966.yaml
scripts/: _docker_compose_release.sh  _slurm_compose_release.sh  aggregate_results.py  slurm_compose_scenario_release.sh
scripts/arrays/: ncap_slurm_array_frontal.txt  ncap_slurm_array_side.txt  ncap_slurm_array_stationary.txt
scripts/download/: download_neurad_weights.sh
tests/: test_scenarios_crash.py
